objects/Racking_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Size__c</fullName>
        <description>Cash Orders - Order Management, field to capture the size in kW of Invisimount kits. PT ID #114754241</description>
        <inlineHelpText>The size, in kW, of portrait layout modules that a single kit of racking supports.</inlineHelpText>
        <label>Kit Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Cash Orders Redesign - field to note what type of racking is being defined. Used to perform item specific automated calculations of racking quantities</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invisimount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SolarMount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmartMount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunFrame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-SunPower Ground Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-SunPower Roof Mount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <description>This is to mention why this racking config is being used in the Master.whether for pricing or for creating Quote Lines</description>
        <label>Usage</label>
        <picklist>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Racking Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Racking Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Racking Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Kit_Size_Required_for_Invisimount</fullName>
        <active>true</active>
        <description>Requirement for kit size to be populated if racking type is invisimount. Kit size entered as size, in kW, of portrait layout modules that a single kit of racking supports</description>
        <errorConditionFormula>$User.ByPassValidation__c = False &amp;&amp; 
ISPICKVAL(Type__c , &apos;Invisimount&apos;) &amp;&amp; 
ISBLANK( Kit_Size__c )</errorConditionFormula>
        <errorMessage>Kit Size is required for Invisimount racking. Please enter as size, in kW, of portrait layout modules that a single kit of racking supports.</errorMessage>
    </validationRules>
</CustomObject>